--- a/views/DatosPersonales.ejs
+++ b/views/DatosPersonales.ejs
@@ -1,6 +1,138 @@
+
+<%- include('template/header2'); %>
 <%- include('template/header'); %>
+
 <body>
-	
+	<main id="principal"></main>
+    <style>#particles-js{
+        width:100%;
+        height:100vh;
+        right:0px;
+        left: 0px;
+      background: black;
+      position:fixed;
+      top:0;
+      z-index: -1;
+     
+    }
+</style>
+<div id="particles-js"></div>
+       <script src="/static/js/particles.min.js"></script>
+       <script>particlesJS(
+        {
+          "particles": {
+            "number": {
+              "value": 80,
+              "density": {
+                "enable": true,
+                "value_area": 800
+              }
+            },
+            "color": {
+              "value": "#ffffff"
+            },
+            "shape": {
+              "type": "circle",
+              "stroke": {
+                "width": 0,
+                "color": "#000000"
+              },
+              "polygon": {
+                "nb_sides": 5
+              },
+              "image": {
+                "src": "img/github.svg",
+                "width": 100,
+                "height": 100
+              }
+            },
+            "opacity": {
+              "value": 0.5,
+              "random": false,
+              "anim": {
+                "enable": false,
+                "speed": 1,
+                "opacity_min": 0.1,
+                "sync": false
+              }
+            },
+            "size": {
+              "value": 3,
+              "random": true,
+              "anim": {
+                "enable": false,
+                "speed": 40,
+                "size_min": 0.1,
+                "sync": false
+              }
+            },
+            "line_linked": {
+              "enable": true,
+              "distance": 150,
+              "color": "#ffffff",
+              "opacity": 0.4,
+              "width": 1
+            },
+            "move": {
+              "enable": true,
+              "speed": 6,
+              "direction": "none",
+              "random": false,
+              "straight": false,
+              "out_mode": "out",
+              "bounce": false,
+              "attract": {
+                "enable": false,
+                "rotateX": 600,
+                "rotateY": 1200
+              }
+            }
+          },
+          "interactivity": {
+            "detect_on": "canvas",
+            "events": {
+              "onhover": {
+                "enable": false,
+                "mode": "repulse"
+              },
+              "onclick": {
+                "enable": true,
+                "mode": "push"
+              },
+              "resize": true
+            },
+            "modes": {
+              "grab": {
+                "distance": 400,
+                "line_linked": {
+                  "opacity": 1
+                }
+              },
+              "bubble": {
+                "distance": 400,
+                "size": 40,
+                "duration": 2,
+                "opacity": 8,
+                "speed": 3
+              },
+              "repulse": {
+                "distance": 200,
+                "duration": 0.4
+              },
+              "push": {
+                "particles_nb": 4
+              },
+              "remove": {
+                "particles_nb": 2
+              }
+            }
+          },
+          "retina_detect": true
+        }
+      
+        
+       )</script>
+   </div>
     <h1>Estos son los datos personales </h1>
 <nav>
 	
@@ -13,13 +145,38 @@
 	<a href="#"style="margin-left:50px;">3216692365</a>
 	<a href="#"style="margin-left:120px;">Jarrison Stived</a>
 	<div class="animation start-home"></div>
-	
-	
-</nav>
+	<h2 style="display: inline-block ">Soy programador de software desde hace 1 año no tengo experiencia trabajando soy un chico muy apacionado por aprender cosas nuevas</h2>
+<head>
+	<link rel="stylesheet"href="fontello.css">
+	<link rel="stylesheet"href="DatosPersonales.css">
+</head>
+<body>
+	<div class="container"><a href="Curriculum.pdf" class="btm-descarga icon-descarga"download="curiculum"title="descargar curiculum"></a></div>
+</body>
+	</nav>
+	<br>
 </body>
 <p>
+	
 	By <span>Jarison Stived</span>
   </p>
+
 <body>
-	<img class="foto" src="/static/foto.jpeg">
+  
+  <link rel="stylesheet" href="../public/css/inicio.css">
+	<style>
+img{
+ border-radius: 50%;
+ width: 700px;
+ height: 700px;
+ background-image: url(../foto.jpeg);
+ background-size: 100%;
+ margin: 0 auto;
+}
+  </style>
+  <img class="foto" src="/static/foto3.jpeg">
 </body>
+
+
+<li style="float:right"><a class="active" download="curriculum" href="/static/curriculum.pdf">Curriculum</a></li>
+
