--- a/views/Inicio.ejs
+++ b/views/Inicio.ejs
@@ -1,5 +1,29 @@
-<%- include('template/header'); %>
-<body>
-    <h1>Bienvenidos</h1>
-   <center><img src="https://i.pinimg.com/originals/c2/90/2e/c2902e533e67e1e46aa702ebc9b99a8d.gif"></center>
-</body>
+<%- include('template/header3'); %>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Vídeo Background</title>
+    <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet"> 
+  </head>
+  <body>
+    <span class="en">english</span>
+    <input type="checkbox" class="check">
+    <span class="es">spanish</span>
+    <header class="header content">
+      <div class="header-video">
+        <video src="/static/keyboard.mp4" autoplay loop></video>
+   
+      </div>
+      <div class="header-overlay"></div>
+      <div class="header-content">
+        <div class="container"> 
+        
+        </div>
+        <h1>Jarison Stived Mican </h1>
+        <p>Ingeniero de software entusiasta de la tecnologia y en la creacion de paginas web.</p>
+      </div>
+    </header>
+  </body>
+</html>
