--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,7 @@ ul {
 }
 li {
     float: left;
+	
 }
 li a {
     display: block;
@@ -18,21 +19,23 @@ li a {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+	
 }
 
 li a:hover:not(.active) {
     background-color: #111;
+	
 }
 
 .active {
     background-color: #4CAF50;
+	
 }
 
 
 
 nav {
 	margin: 27px auto 0;
-
 	position: relative;
 	width: 590px;
 	height: 50px;
@@ -52,6 +55,7 @@ nav a {
 	text-align: center;
 	color: white;
 	cursor: pointer;
+	
 }
 nav .animation {
 	position: absolute;
@@ -60,9 +64,11 @@ nav .animation {
 	z-index: 0;
 	transition: all .5s ease 0s;
 	border-radius: 8px;
+	
 }
 a:nth-child(1) {
 	width: 100px;
+	
 }
 a:nth-child(2) {
 	width: 110px;
@@ -80,6 +86,7 @@ nav .start-home, a:nth-child(1):hover~.animation {
 	width: 100px;
 	left: 0;
 	background-color: #1abc9c;
+	
 }
 nav .start-about, a:nth-child(2):hover~.animation {
 	width: 110px;
@@ -113,8 +120,9 @@ h1 {
 	text-align: center;
 	font-size: 30px;
 	color: #ecf0f1;
-	text-shadow: 2px 2px 4px #000000;
+	text-shadow: 2px 2px 4px blue;
 	font-family: 'Cherry Swash', cursive;
+	
 }
 h2{
 	text-align: center;
@@ -122,7 +130,6 @@ h2{
 	text-align: center;
 	font-size: 20px;
 	color: white;
-
 	font-family: 'Cherry Swash', cursive;
 }
 
@@ -138,4 +145,8 @@ p {
 
 span {
     color: #2BD6B4;
+}
+.h1::-webkit-scrollbar{
+	width: 7px;
+	background-color: #0d1117;
 }
