--- a/views/educacion.ejs
+++ b/views/educacion.ejs
@@ -1,5 +1,137 @@
+<%- include('template/header2'); %>
 <%- include('template/header'); %>
 <body>
+    <main id="principal"></main>
+    <style>#particles-js{
+        width:100%;
+        height:100vh;
+        right:0px;
+        left: 0px;
+      background: black;
+      position:fixed;
+      top:0;
+      z-index: -1;
+     
+    }
+        </style>
+        <div id="particles-js"></div>
+       <script src="/static/js/particles.min.js"></script>
+       <script>particlesJS(
+        {
+          "particles": {
+            "number": {
+              "value": 80,
+              "density": {
+                "enable": true,
+                "value_area": 800
+              }
+            },
+            "color": {
+              "value": "#ffffff"
+            },
+            "shape": {
+              "type": "circle",
+              "stroke": {
+                "width": 0,
+                "color": "#000000"
+              },
+              "polygon": {
+                "nb_sides": 5
+              },
+              "image": {
+                "src": "img/github.svg",
+                "width": 100,
+                "height": 100
+              }
+            },
+            "opacity": {
+              "value": 0.5,
+              "random": false,
+              "anim": {
+                "enable": false,
+                "speed": 1,
+                "opacity_min": 0.1,
+                "sync": false
+              }
+            },
+            "size": {
+              "value": 3,
+              "random": true,
+              "anim": {
+                "enable": false,
+                "speed": 40,
+                "size_min": 0.1,
+                "sync": false
+              }
+            },
+            "line_linked": {
+              "enable": true,
+              "distance": 150,
+              "color": "#ffffff",
+              "opacity": 0.4,
+              "width": 1
+            },
+            "move": {
+              "enable": true,
+              "speed": 6,
+              "direction": "none",
+              "random": false,
+              "straight": false,
+              "out_mode": "out",
+              "bounce": false,
+              "attract": {
+                "enable": false,
+                "rotateX": 600,
+                "rotateY": 1200
+              }
+            }
+          },
+          "interactivity": {
+            "detect_on": "canvas",
+            "events": {
+              "onhover": {
+                "enable": false,
+                "mode": "repulse"
+              },
+              "onclick": {
+                "enable": true,
+                "mode": "push"
+              },
+              "resize": true
+            },
+            "modes": {
+              "grab": {
+                "distance": 400,
+                "line_linked": {
+                  "opacity": 1
+                }
+              },
+              "bubble": {
+                "distance": 400,
+                "size": 40,
+                "duration": 2,
+                "opacity": 8,
+                "speed": 3
+              },
+              "repulse": {
+                "distance": 200,
+                "duration": 0.4
+              },
+              "push": {
+                "particles_nb": 4
+              },
+              "remove": {
+                "particles_nb": 2
+              }
+            }
+          },
+          "retina_detect": true
+        }
+      
+        
+       )</script>
+   </div>
+   
     <h1>Profesionalmente</h1>
     <h2><center>En 2020 me incorpore a tecnico que ofrecia el colegio como desarroyador de software como tecnico de hay empezamos a crear un proyecto que duro 2 años en total que fueron de 10 hasta 11 de hay pues gane el tecnico y me certifique como tal entonces en 2022 me llego un correo del sena diciendo que se me gustaria participar en el tecnologo y despues omologar a una universidad yo con todo el gusto y todo el anelo les dije que si ademas de esto a mi me gusta mucho la computacion y pues me habia planteado ser programador.</center></h2>
     <h2><center>Actualmente estoy haciendo un tecnólogo en el centro de formación del Sena pero mis objetivos son llegar mas lejos que esto quiero hacer una especialización en ingeniería de sistemas</center></h2>
@@ -7,3 +139,7 @@
     <h2>Desde muy pequeño e tenido un computador que me a permitido lograr lo que tengo hasta ahora hace mucho tiempo equerido armar mi primera pc gamer con la ayuda que el sena y la empresa me a proporsionado e logrado tener el anelo que siempre e querido que es mi computador gamer actualmente se lo basico de hardware pero mi interes me a llevado a mucho mas y tengo varios conocimientos sobre este</h2>
     <center><img src="https://muyeducativo.com/wp-content/uploads/2018/01/cpu-images-min_opt.jpg"></center>
 </body>
+    <li style="float:right"><a class="active" download="Tecnico" href="/static/certificadodetécnico.pdf">Tecnico</a></li>
+    
+    
+  
