--- a/views/template/header.ejs
+++ b/views/template/header.ejs
@@ -10,6 +10,7 @@
 </head>
 
 <ul>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <li style="float:left"><a href="Inicio">Inicio</a>
     <li style="float:left"><a href="educacion">Educacion</a>
     <li style="float:left"><a href="/laboral">Laboral</a>
