--- a/views/template/header4.ejs
+++ b/views/template/header4.ejs
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portafolio jarrison</title>
-    <%- include('template/header'); %>
+    <link rel="stylesheet" type="text/css" href="./../static/css/boton.css">
+    <script src="./js/main.js"></script>
+    <title>Document</title>
 </head>
-<body>
-   
-</body>
-
-</html>
