--- a/views/DatosPersonales.ejs
+++ b/views/DatosPersonales.ejs
@@ -167,8 +167,8 @@
 	<style>
 img{
  border-radius: 50%;
- width: 700px;
- height: 700px;
+ width: 200px;
+ height: 200px;
  background-image: url(../foto.jpeg);
  background-size: 100%;
  margin: 0 auto;
@@ -179,4 +179,10 @@ img{
 
 
 <li style="float:right"><a class="active" download="curriculum" href="/static/curriculum.pdf">Curriculum</a></li>
+<a class="github" href="https://github.com/jarison102"><img src="/static/github4.png"></a>
+<a class="face" href="https://www.facebook.com/jarison.micancespedes/"><img src="/static/face-logo.png"></a>
+<a class="instagram" href="https://www.instagram.com/stived_u/"><img src="/static/instagram2.png"></a>
+<a class="twitter" href="https://twitter.com/MicanStiven"><img src="/static/twitter3.png"></a>
+
+
 
