--- a/views/Inicio.ejs
+++ b/views/Inicio.ejs
@@ -1,4 +1,5 @@
 <%- include('template/header3'); %>
+<%- include('template/navbarini'); %>
 <!DOCTYPE html>
 <html>
   <head>
@@ -8,9 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet"> 
   </head>
   <body>
-    <span class="en">english</span>
-    <input type="checkbox" class="check">
-    <span class="es">spanish</span>
+
     <header class="header content">
       <div class="header-video">
         <video src="/static/keyboard.mp4" autoplay loop></video>
