--- a/views/educacion.ejs
+++ b/views/educacion.ejs
@@ -1,5 +1,6 @@
 <%- include('template/header2'); %>
 <%- include('template/header'); %>
+<%- include('template/DOWNLOAD'); %>
 <body>
     <main id="principal"></main>
     <style>#particles-js{
@@ -133,13 +134,39 @@
    </div>
    
     <h1>Profesionalmente</h1>
-    <h2><center>En 2020 me incorpore a tecnico que ofrecia el colegio como desarroyador de software como tecnico de hay empezamos a crear un proyecto que duro 2 años en total que fueron de 10 hasta 11 de hay pues gane el tecnico y me certifique como tal entonces en 2022 me llego un correo del sena diciendo que se me gustaria participar en el tecnologo y despues omologar a una universidad yo con todo el gusto y todo el anelo les dije que si ademas de esto a mi me gusta mucho la computacion y pues me habia planteado ser programador.</center></h2>
-    <h2><center>Actualmente estoy haciendo un tecnólogo en el centro de formación del Sena pero mis objetivos son llegar mas lejos que esto quiero hacer una especialización en ingeniería de sistemas</center></h2>
-    <center><img src="https://thumbs.dreamstime.com/b/concepto-de-la-gesti%C3%B3n-de-fondos-94098098.jpg"></center>
-    <h2>Desde muy pequeño e tenido un computador que me a permitido lograr lo que tengo hasta ahora hace mucho tiempo equerido armar mi primera pc gamer con la ayuda que el sena y la empresa me a proporsionado e logrado tener el anelo que siempre e querido que es mi computador gamer actualmente se lo basico de hardware pero mi interes me a llevado a mucho mas y tengo varios conocimientos sobre este</h2>
-    <center><img src="https://muyeducativo.com/wp-content/uploads/2018/01/cpu-images-min_opt.jpg"></center>
+    <h2>En 2020 me incorpore a técnico que ofrecía el colegio como desarrollador de software como técnico de hay empezamos a crear un proyecto que duro 2 años en total que fueron de 10 hasta 11 de hay pues gane el técnico y me certifique como tal entonces en 2022 me llego un correo del Sena diciendo que se me gustaría participar en el tecnólogo y después homologar a una universidad yo con todo el gusto y todo el anhelo les dije que si además de esto a mi me gusta mucho la computación y pues me había planteado ser programador.
+      Actualmente estoy haciendo un tecnólogo en el centro de formación del Sena pero mis objetivos son llegar mas lejos que esto quiero hacer una especialización en ingeniería de sistemas</h2>
+    <h2>Desde muy pequeño e tenido un computador que me a permitido lograr lo que tengo hasta ahora hace mucho tiempo equerido armar mi primera pc gamer con la ayuda que el sena y la empresa me a proporcionado e logrado tener el anhelo que siempre e querido que es mi computador gamer actualmente se lo básico de hardware pero mi interés me a llevado a mucho mas y tengo varios conocimientos sobre este</h2>
+    <img class="tecnico" src="/static/tecnico.jpg">
+    <img class="salud" src="/static/Saludparaeltrabajo.jpg">
 </body>
-    <li style="float:right"><a class="active" download="Tecnico" href="/static/certificadodetécnico.pdf">Tecnico</a></li>
     
     
-  
+    <div class="botonsalud">
+      <div class="download-btn btn-1">
+        <div class="top">
+          <i class="fa fa-cloud-download"></i> Descargar Curriculum
+        </div>
+        <div class="bottom">
+          <a download="Tecnico" href="../static/Tecnico5.pdf">
+              Pesado: 2GB
+              <i class="fa fa-cloud-download" > Descargar Curriculum</i>
+          </a>
+          
+      </div>
+      </div>
+      <br>
+      
+      <div class="botontec">
+        <div class="download-btn btn-1">
+          <div class="top">
+            <i class="fa fa-cloud-download"></i> Descargar Curriculum
+          </div>
+          <div class="bottom">
+            <a download="Salud para el trabajo" href="/static/Salud para el trabajo.pdf">
+                Pesado: 5GB
+                <i class="fa fa-cloud-download" > Descargar Curriculum</i>
+            </a>
+            
+        </div>
+        </div>
