--- a/public/css/inicio.css
+++ b/public/css/inicio.css
@@ -13,7 +13,7 @@ img{
     line-height: 1.5;
     color: #333;
     overflow-x: hidden;
-    
+   
   }
   
   .header {
@@ -21,6 +21,7 @@ img{
     display: flex;
     align-items: center;
     color: #fff;
+    
   }
   
   .content {
@@ -29,6 +30,7 @@ img{
     padding-right: 1rem;
     margin: auto;
     text-align: center;
+    
   }
   
   .header-video {
@@ -36,7 +38,7 @@ img{
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 110vh;
     overflow: hidden;
   }
   
@@ -46,7 +48,7 @@ img{
   }
   
   .header-overlay {
-    height: 100vh;
+    height: 110vh;
     width: 100vw;
     position: absolute;
     top: 0;
@@ -103,11 +105,15 @@ body {
   align-items: center;
   flex-flow: wrap;
   background: var(--bg);
-  font-size: 20px;
+  font-size:  20px;
   font-family: 'Titillium Web', sans-serif;
 }
-h1 {
-  color: var(--solid);
-  font-size: 2.5rem;
-  margin-top: 6rem; 
+.lista{
+  position: relative;
+  width: 380px;
+  height: 70px;
+  left:80px;
+  font-family: 'Cherry Swash',cursive;
+    font-size: 15px;
 }
+
