--- a/views/Habilidades.ejs
+++ b/views/Habilidades.ejs
@@ -274,21 +274,7 @@
 					<input type="email" id="email" name="email" placeholder="Jarison@gmail.com" title="Please enter a valid email" required="">
 				</div>
 
-				<div class="form-control">	
-					<label class="header">Número de teléfono<span>:</span></label>
-					<input type="tel" id="tel" name="tel" placeholder="Número de teléfono" title="Please enter a valid Phone number" required="">
-				</div>
 
-				<div class="form-control">	
-					<label class="header">Clave <span>:</span></label>
-					<input type="password" class="lock" name="password" placeholder="Clave" id="password1" required="">
-				</div>
-
-				<div class="form-control">	
-					<label class="header">Confirmar contraseña <span>:</span></label>	
-					<input type="password" class="lock" name="confirm-password" placeholder="Confirmar contraseña " id="password2" required="">
-				</div>	
-				
 				<div class="w3_submit">
 					<input type="submit" class="register" value="Enviar">
 				</div>
@@ -296,21 +282,8 @@
 			</form>
 		</div>
 	</div>
-	<script type="text/javascript">
-		window.onload = function () {
-			document.getElementById("password1").onchange = validatePassword;
-			document.getElementById("password2").onchange = validatePassword;
-		}
-		function validatePassword(){
-			var pass2=document.getElementById("password2").value;
-			var pass1=document.getElementById("password1").value;
-			if(pass1!=pass2)
-				document.getElementById("password2").setCustomValidity("son diferentes las claves");
-			else
-				document.getElementById("password2").setCustomValidity('');	 
-				
-		}
-	</script>
+	
+
 
 
 		<script src="js/jquery.magnific-popup.js" type="text/javascript"></script>
@@ -334,12 +307,16 @@
 </html>
 
 <div class="center">
-	<div class="download-btn btn-1">
-	  <div class="top">
-		<i class="fa fa-cloud-download"></i> Descargar Curriculum
-	  </div>
-	  <div class="bottom">
-		Pesado: 2GB
-	  </div>
-	</div>
+    <div class="download-btn btn-1">
+      <div class="top">
+        <i class="fa fa-cloud-download"></i> Descargar Curriculum
+      </div>
+      <div class="bottom">
+        <a download="Tecnico" href="../static/certificadodetécnico.pdf">
+            Pesado: 2GB
+            <i class="fa fa-cloud-download" > Descargar Curriculum</i>
+        </a>
+        
+    </div>
+    </div>
 	
